OpenAPI doc generation and SPARQL query/update
